# rag-for-fiber-optics

./: .gitignore  setup.cfg
front_end/: interface.py  ssh_connect.py
rag/: LLMs.py  chat.py  chat_memory.py  prompts.py  utils.py
rag/chunk/: chunk.py  experiments.py  langchain_splitter.py  llamaindex_splitter.py  semantic_chunk.py
rag/fine_tune/: SFT.py  sentence_transfomer_fine_tuning.py
rag/load/: loaders.py
rag/post_process/: compressor.py
rag/scripts/: embedders.py  generate_dataset.py  rag_demo.py  rag_test.py  retrieval_test.py
rag/vectror_DB/: chroma_langchain_test.py  chroma_test.py  faiss_create.py  faiss_search.py
