[metadata]
name = rag
version = 1.0.0
author = Paul Malige, Peng Zheng
author_email = pmalige@slb.com
description = experimenting with RAG.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.azure.com/slb-swt/AI_Lab/_git/rag
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    pandas
    torch
    transformers
    
[options.packages.find]
include = rag, rag.*


